# kurs

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: access.py  app.py  connection.py  redis_provider.py  sql_provider.py
src/admin/: routes.py
src/admin/employees/: routes.py
src/admin/reports/: routes.py
src/admin/ship/: routes.py
src/admin/templates/: add_ship.html  admin_report.html  ship_add.html  (+1 more)
src/auth/: routes.py
src/brigadir/: routes.py
src/common/: table_naming.py
src/modules/: admin_module.py  auth_module.py  brigadir_module.py  employees_module.py  find_user_in_db.py  record_module.py  reports_module.py  ship_module.py
src/record/: routes.py
src/ships/: routes.py
src/sql/: add_brigade.sql  add_brigade_employers.sql  add_employee.sql  add_procedure.sql  add_row.sql  add_ship.sql  add_ship_record.sql  all_employees.sql  all_ship_types.sql  all_ships.sql  all_workers.sql  delete_employee.sql  delete_ship.sql  edit_birgade_employee_hour.sql  edit_brigade_status.sql  edit_employee.sql  edit_ship.sql  find_employee.sql  find_external_user.sql  find_internal_user.sql  find_ship_by_tonnage.sql  find_ship_with_types.sql  find_user.sql  get_all_brigades_with_ship_and_employees_count.sql  get_brigade_with_ship_and_workers.sql  restore_employee.sql  set_ship_date_created.sql  ships_for_record.sql  ships_with_types.sql  unloaded_ships_with_types.sql  use_employee_statistic_procedure.sql  use_procedure.sql  use_ship_statistic_procedure.sql  use_task_statistic_procedure.sql
src/templates/: logout.html  menu.html
(+17 files in other folders)
